tests/incremental_duplicate_delete/incremental_duplicate_delete.exp

Initial status:
No errors!

Copy A.js to B.js:
Error ----------------------------------------------------------------- B.js:1:1

Error: B.js:1
  1: /**
     ^ Duplicate module provider for `A`. Change either this module provider or the current module provider [1].
  References:
    1: /**
       ^ [1]: current module provider. See: A.js:1


Found 1 error

Delete A.js:
No errors!

Move B.js to A.js:
No errors!

Done!
